# deepgraph

./: .binstar.yml  .gitignore  .readthedocs.yaml  LICENCE.txt  LICENSE.txt  README.rst  meta.yaml  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
conda_recipe/: .binstar.yml  build.sh  meta.yaml
deepgraph/: .gitignore  __init__.py  _find_selected_indices.c  _find_selected_indices.pyx  _triu_indices.c  _triu_indices.pyx  connector_selector_implementations.py  connectors_and_selectors.py  deepgraph.py  functions.py  iterators_and_indexers.py  utils.py
doc/: Makefile  make.bat
doc/source/: api_reference.rst  conf.py  contact.rst  index.rst  installation.rst  what_is_deepgraph.rst
doc/source/reference/: legal.rst
doc/source/tutorials/: 10min_to_deepgraph.ipynb  10min_to_deepgraph.py  10min_to_deepgraph.rst  SSW_download_2016-05-03T20_19_28_23621_2oIe06xp.inp  circular_plot.py  flying_balls.csv  flying_balls.pickle  index.rst  pairwise_correlations.ipynb  pairwise_correlations.py  pairwise_correlations.rst  precipitation.ipynb  precipitation.py  precipitation.rst  terrorists.py  terrorists.rst
doc/source/tutorials/data/: precipitation.pickle
tests/: test_CreateEdges.py  test_DeepGraph.py
