[build-system]
requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp*win*"
test-requires = ["pytest", "scipy", "networkx", "tables"]
test-command = "pytest {project}/tests"
test-skip = ["*win*", "*mac*"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]