[build-system]
requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["pp*win*", "pp*mac*"]
test-requires = ["pytest", "scipy", "networkx", "tables"]
test-command = "pytest {project}/tests"
test-skip = ["pp*linux*", "*win*", "*mac*", "*i686"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]